--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,17 @@
 html, body{
     scroll-behavior: smooth;
+    
 
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Khmer&display=swap');
+
+body {
+    font-family: "Khmer", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 .col-sm-12 {
     overflow: auto;
 }
@@ -9,8 +19,6 @@ html, body{
 #example1_wrapper>.row:first-child {
     margin: 0 10px;
 }
-
-
 .dropdown-content {
     position: absolute;
     background-color: #f9f9f9;
@@ -18,7 +26,6 @@ html, body{
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.2);
     z-index: 1;
 }
-
 .dropdown-content p {
     color: black;
     padding: 12px 16px;
@@ -26,7 +33,6 @@ html, body{
     display: block;
     cursor: pointer;
 }
-
 .dropdown-content p:hover {
     background-color: #f1f1f1;
 }
