--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,12 @@
 html, body{
     scroll-behavior: smooth;
-    
-
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Khmer&display=swap');
 
-body {
+td {
     font-family: "Khmer", sans-serif;
-    font-weight: 400;
-    font-style: normal;
+ 
   }
   
 .col-sm-12 {
