--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,7 @@ html, body{
 
 @import url('https://fonts.googleapis.com/css2?family=Khmer&display=swap');
 
-body {
+td {
     font-family: "Khmer", sans-serif;
     font-weight: 400;
     font-style: normal;
