--- a/styles/main.css
+++ b/styles/main.css
@@ -14,6 +14,9 @@ td,textarea {
 .dataTables_wrapper>.row:first-child {
   margin: 0 10px;
 }
+.dataTables_wrapper>.row:last-child {
+  margin: 0 10px;
+}
 /* tabel  */
 
 /* suggestion_dropdown station id */
